--- a/src/style/_Home.scss
+++ b/src/style/_Home.scss
@@ -30,7 +30,7 @@
 
   .head {
     width: 100%;
-    height: 45vh;
+    height: 38vh;
     padding: 20px;
     display: flex;
     align-items: center;
@@ -82,7 +82,7 @@
     }
   }
 
-  .infos {
+  .info {
     text-align: end;
     margin-top: 10px;
 
